welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: reassignment to val
if (litMessage="R"){
              ^BDRBuggle:11: error: reassignment to val
if (litMessage="L"){
              ^BDRBuggle:16: error: reassignment to val
if (litMessage="I"){
              ^BDRBuggle:23: error: reassignment to val
if(litMessage="A"){
             ^BDRBuggle:27: error: reassignment to val
if(litMessage="B"){
             ^BDRBuggle:32: error: reassignment to val
if(litMessage="C"){
             ^BDRBuggle:38: error: reassignment to val
if(litMessage="Z"){
             ^BDRBuggle:42: error: reassignment to val
if(litMessage="Y"){
             ^BDRBuggle:47: error: reassignment to val
if(litMessage="X"){
             ^